feat(openapi): response schemas for business partners
